Add reset button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,23 @@
     <title>Etch A Sketch</title>
     <script src="index.js" defer></script>
 </head>
+
 <body>
-    <div class="container"></div>
+    <header>
+        
+    </header>
+
+    <main>
+        <div>
+            <button class="primary-button" id="clear-button">Clear Grids</button>
+            <p id="grid-res-display">Grid Resolution : <span></span></p>
+        </div>
+        <div class="container"></div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
-</html> 
+
+</html>
