Add footer section

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 <body>
     <header>
-        
+
     </header>
 
     <main>
         <div>
-            <button class="primary-button" id="clear-button">Clear Grids</button>
+            <button class="primary-button" id="clear-button">Clear Grid</button>
             <p id="grid-res-display">Grid Resolution : <span></span></p>
         </div>
         <div class="container"></div>
     </main>
 
     <footer>
-
+        <p>Created by Kent <a href="https://github.com/slavidkent"><img src="./images/github-icon.png" alt="GitHub logo"></a></p>
     </footer>
 </body>
 
